===============================
AFMS Release 0.5.x (2008-xx-xx)
===============================

Bug fixes
~~~~~~~~~  
* when a feature is selected (in tree or list) and the command
  'New usecase' is issued, the new usecase now becomes attached 
  to the selected feature. 


===============================
AFMS Release 0.5.0 (2008-09-23)
===============================

New features
~~~~~~~~~~~~
* Testcase extension: a new text field for a URL to a test script has been 
  added. In testrunner this script could be executed from within the GUI. 
  Test result is set according to the return code of the script. Also in 
  testrunner all or some scripts may be executed in batch mode. 

* Extended settings dialog: 
  configurable stylesheets for XML and HTML export
  and opening the default viewer after report creation

* Drag and drop support for afeditor and testrunner: 
  dropping a artefact file in the tree region opens the file

* Statistics: simple artefact statistics available with menu item 
  File/Statistics

* Recent files (afeditor and testrunner): 
  list of recently opened files is now provided in File menu

* Added table formating to popup menu of multiline text controls.
  This works for HTML and REST renderers
  
* Added Indent/Unindent command to popup menu of multiline text controls.  

* Added a menu item Help/Feedback with links to bug tracker, feature request 
  tracker and so on.

* In error messages dialogs due to Python exceptions the complete tracelog is 
  shown. This will allow better support.


Changes
~~~~~~~
* Toolbar button for glossary entries replaces 'Add' button 
  below the glossary list view 
  
* HTML export now makes XHTML

* XML export format changed

* Improved display in list views for long strings with lots of tabs and newlines

* "Version" field replaced by "Key" field: for features, requirements and 
  testcases the field "Version" has been renamed to "Key". When editing such 